crates/toml_edit/tests/snapshots/invalid/ext/table/append-with-dotted-keys-3.stderr
TOML parse error at line 7, column 1
  |
7 | [dependencies]
  | ^
invalid table header
duplicate key `dependencies` in document root
